Servitronic con imagenes

--- a/site/public/stylesheets/gridBrands.css
+++ b/site/public/stylesheets/gridBrands.css
@@ -137,8 +137,9 @@ margin-top: 55px;
         justify-content: space-around;
     }
     .importantBrandsImg{
-        width: 266px;
-        height: 118px;
+        width: 200px;
+        height: 150px;
+        margin-top: 22px;
         
        
     }
