--- a/site/public/stylesheets/contact.css
+++ b/site/public/stylesheets/contact.css
@@ -3,7 +3,9 @@
     margin-left: 10%;
     margin-top: 30px;
 }
-
+.logo-mobile-servi{
+    display:none
+}
 .contactForm form{
     display: flex;
     flex-direction: column;
@@ -70,6 +72,9 @@
    display: none;
 }
 @media (min-width: 768px){
+    .logo-mobile-servi{
+        display:inline
+    }
     .contactImg {
         display: none;
     }
